Use only public APIs to read PKCS#1 keys (#5240)
Co-authored-by: Weijun Wang <weijun.wang@oracle.com>